# ExcelSuradniceScript

./: .gitignore  ExcelSuradniceScript.sln  README.md  app.go  console.go  file_manager_nonwindows.go  file_manager_windows.go  format_manager.go  format_manager_test.go  go.mod  go.sum  main.go  main_nonwindows.go  main_windows.go  main_windows_test.go  package-lock.json  package.json  service.go  service_test.go  tsconfig.json  ui_main_windows.go  ui_prompts_windows.go  workbook.go
.github/workflows/: ci.yml  release.yml
ExcelSuradniceScript/: EssCore.cs  EssFileManager.cs  EssFormatManager.cs  ExcelSuradniceScript.csproj  Program.cs
docs/: desktop-app-navrh.md
scripts/: copy-static.mjs
src/: main.ts  preload.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/frontend/: index.html
src-tauri/src/: lib.rs  main.rs
src/core/: processor.test.ts  processor.ts  types.ts
src/renderer/: index.html  renderer.ts  styles.css
