[package]
name = "excel-suradnice-script"
version = "0.1.0"
description = "Excel coordinate formatter"
authors = ["ExcelSuradniceScript"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
serde = { version = "1", features = ["derive"] }
calamine = "0.31"
umya-spreadsheet = "2.3"
thiserror = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
